Updated docker-compose and added code for chrome extension

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
-  patr:
-    image: "alexburlacu/rtp-server"
-    container_name: patr
+  patr2:
+    image: "alexburlacu/rtp-server:lab2"
+    container_name: patr2
     ports:
       - "4000:4000"
   web:
@@ -13,7 +13,7 @@ services:
     environment:
       - REDIS_HOST=redis
     depends_on:
-      - patr
+      - patr2
   redis:
     container_name: cache
     image: "redis:alpine"
